--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "dev": "astro dev",
     "dev:network": "astro dev --host",
     "build": "astro check && tsc --noEmit && astro build"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "typescript": "^5.7.3"
   }
 }
