--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "typescript": "^5.7.3"
+    "@astrojs/mdx": "^2.2.0",
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/inter": "^5.0.17",
+    "@fontsource/lora": "^5.0.16",
+    "@tailwindcss/typography": "^0.5.10",
+    "astro": "^4.5.6",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
